--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Home | Noti</title>
-        <meta name="description" content="Noti is a open-source note taking and documentation webapp!">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/default.css">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Welcome | Noti</title>
+    <meta name="description" content="Noti is an open source notetaking and documentation creating webapp!">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/home.css">
+</head>
+
+<body>
+    <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://www.mozilla.org/en-US/firefox/new/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     
+    <div class="welcome">
+        <h1> Welcome to Noti! 📒 </h1>
+        <h3> Noti is your open-source permanent note solution!  </h3>
+        <img src="media/icons/placeholder.svg" alt="Placeholder image (Will be an image of the noti homepage)"> <br>
+        <a href="app/">Open Noti</a>
+    </div>
+</body>
 
-        <script src="js/index.js" async defer></script>
-    </body>
 </html>
